MainApp.properties
===================================
Added:
targetFileAlreadyExists=Target file %s already exists.\nDo you want to replace/overwrite it?
message.button.overwrite=Overwrite

renameAction.Action.text=&Rename file
renameAction.Action.shortDescription=Rename file
renameAction.Action.accelerator=F2

=======================================================================================================================
                                           Version 0.85u1->0.86
=======================================================================================================================
MainApp.properties
===================================
Added:
fileIsBeingAlreadyDownloading=File is already downloading

quietModeAction.Action.text=&Quiet Mode
quietModeAction.Action.shortDescription=Toggle Quiet Mode
quietModeAction.Action.accelerator=F8
quietModeAction.Action.smallIcon=${iconsPath}loudspeaker.png

quietModeActionTray=Quiet Mode

labelQuietMode.icon=${iconsPath}loudspeaker.png
labelQuietMode.toolTipText=Quiet Mode

userInteractionRequiredWav=user_interaction.wav


Changed:
monitorClipboardAction.Action.accelerator=F7


UserPreferencesDialog.properties
===================================
Added:
checkPreventStandbyWhileDownloading.text=Prevent standby while downloading (Windows only)

alertsPanelGeneral.tab.title=General
alertsPanelQM.tab.title=Quiet Mode

panelActivateQM.border=Quiet Mode activation
radioButtonActivateQMAlways.text=A&lways active when enabled
radioButtonActivateQMWhenWindowsFound.text=Active when enabled and any of the specified &windows are found
labelSearchForWindows.text=Search for these window titles:
btnAddQuietModeDetectionStringAction.Action.text=&Add
btnRemoveQuietModeDetectionStringAction.Action.text=&Remove
checkCaseSensitiveSearchQM.text=&Case sensitive search
panelQMOptions.border=Quiet Mode options
checkNoSoundsInQM.text=Disable &sounds in quiet mode