@@ -329,6 +329,11 @@ contextDialogHelpAction.Action.shortDescription = Show help for this dialog
 checkForNewVersion.Action.text=&Check for new version
 checkForNewVersion.Action.shortDescription=Check for a new version right now!
 
+openLogFile.Action.text=&Open log file
+openLogFile.Action.shortDescription=Open log for viewing
+browseToLogFile.Action.text=&Browse to log file
+browseToLogFile.Action.shortDescription=Open folder of log file
+
 showCompletedAction.Action.text=Show &Completed Downloads
 showCompletedAction.Action.shortDescription=Show/Hide completed downloads once they are in COMPLETE state
 showCompletedAction.Action.accelerator=F6
