@@ -311,6 +311,11 @@ contextDialogHelpAction.Action.shortDescription=Näytä ohje
 checkForNewVersion.Action.text=Tarkista &päivitykset
 checkForNewVersion.Action.shortDescription=Tarkista FreeRapid Downloaderin päivitykset
 
+openLogFile.Action.text=Avaa l&okitiedosto
+openLogFile.Action.shortDescription=Avaa lokitiedosto
+browseToLogFile.Action.text=Näytä lo&kitiedosto
+browseToLogFile.Action.shortDescription=Avaa tiedostonkatselin lokitiedoston kansiossa
+
 showCompletedAction.Action.text=Näytä &valmistuneet lataukset
 showCompletedAction.Action.shortDescription=Näytä/piilota valmistuneet lataukset
 showCompletedAction.Action.accelerator=F7
@@ -394,6 +399,9 @@ message.button.no=Ei
 message.button.ok=OK
 message.button.cancel=Peruuta
 
+targetFileAlreadyExists=Tiedosto %s on jo olemassa.\nHaluatko korvata sen?
+message.button.overwrite=Korvaa
+
 message.areyousuredelete=Haluatko varmasti poistaa nämä tiedostot?%s
 andOtherFiles=...ja %d muuta tiedostoa
 andOtherURLs=...ja %d muuta linkkiä
@@ -464,6 +472,10 @@ cut.Action.shortDescription=Siirrä valinta leikepöydälle
 
 copy.Action.text=&Kopioi
 copy.Action.shortDescription=Kopioi valinta leikepöydälle
+
+renameAction.Action.text=N&imeä uudelleen
+renameAction.Action.shortDescription=Nimeä tiedosto uudelleen
+renameAction.Action.accelerator=F2
 
 paste.Action.text=&Liitä
 paste.Action.shortDescription=Liitä leikepöydän sisältö
